--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,8 @@
-# remap prefix from 'C-b' to 'C-a'
-unbind C-b
-set-option -g prefix C-Space
-bind-key C-Space send-prefix
+setw -g mode-keys vi
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
+set -g default-terminal "screen-256color"
 
+set -g prefix C-Space
+unbind-key C-b
+bind-key C-Space send-prefix
