--- a/spacevim/init.toml
+++ b/spacevim/init.toml
@@ -18,14 +18,20 @@ background = 'dark'
 # Disable guicolors in basic mode, many terminal do not support 24bit
 # true colors
 #guifont = ':h12'
-#guifont = "SauceCodePro Nerd Font Mono:h11"
+guifont = "SauceCodePro NF:h14"
+#guifont="DejaVu Sans Mono for Powerline:h13"
 enable_guicolors = true
 # Disable statusline separator, if you want to use other value, please
 # install nerd fonts
 statusline_separator = 'arrow'
 statusline_inactive_separator = 'arrow'
-buffer_index_type = 4
-enable_statusline_display_mode = false
+enable_tabline_ft_icon = true
+enable_vimfiler_filetypeicon = true
+enable_os_fileformat_icon = true
+buffer_index_type = 1
+
+windows_index_type = 2
+enable_statusline_display_mode = true
 tab_width = 4
 bootstrap_before = 'myspacevim#before'
 bootstrap_after = 'myspacevim#after'
